P5/MiniRAParser/MiniRAParser.java
/* MiniRAParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniRAParser.java */
import syntaxtree.*;
import java.util.Vector;


public class MiniRAParser implements MiniRAParserConstants {

  static final public Goal Goal() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   IntegerLiteral n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   IntegerLiteral n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   IntegerLiteral n14;
   NodeToken n15;
   Token n16;
   StmtList n17;
   NodeToken n18;
   Token n19;
   NodeOptional n20 = new NodeOptional();
   SpillInfo n21;
   NodeListOptional n22 = new NodeListOptional();
   Procedure n23;
   NodeToken n24;
   Token n25;
    n1 = jj_consume_token(MAIN);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LSQPAREN);
n2 = JTBToolkit.makeNodeToken(n3);
    n4 = IntegerLiteral();
    n6 = jj_consume_token(RSQPAREN);
n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(LSQPAREN);
n7 = JTBToolkit.makeNodeToken(n8);
    n9 = IntegerLiteral();
    n11 = jj_consume_token(RSQPAREN);
n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(LSQPAREN);
n12 = JTBToolkit.makeNodeToken(n13);
    n14 = IntegerLiteral();
    n16 = jj_consume_token(RSQPAREN);
n15 = JTBToolkit.makeNodeToken(n16);
    n17 = StmtList();
    n19 = jj_consume_token(END);
n18 = JTBToolkit.makeNodeToken(n19);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 81:{
      n21 = SpillInfo();
n20.addNode(n21);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      n23 = Procedure();
n22.addNode(n23);
    }
n22.nodes.trimToSize();
    n25 = jj_consume_token(0);
n25.beginColumn++; n25.endColumn++;
      n24 = JTBToolkit.makeNodeToken(n25);
{if ("" != null) return new Goal(n0,n2,n4,n5,n7,n9,n10,n12,n14,n15,n17,n18,n20,n22,n24);}
    throw new Error("Missing return statement in function");
}

  static final public StmtList StmtList() throws ParseException {NodeListOptional n0 = new NodeListOptional();
   NodeSequence n1;
   NodeOptional n2;
   Label n3;
   Stmt n4;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOOP:
      case MOVE:
      case CALL:
      case ERROR:
      case PRINT:
      case JUMP:
      case CJUMP:
      case HSTORE:
      case HLOAD:
      case ALOAD:
      case ASTORE:
      case PASSARG:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
n2 = new NodeOptional();
n1 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        n3 = Label();
n2.addNode(n3);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
n1.addNode(n2);
      n4 = Stmt();
n1.addNode(n4);
n0.addNode(n1);
    }
n0.nodes.trimToSize();
{if ("" != null) return new StmtList(n0);}
    throw new Error("Missing return statement in function");
}

  static final public Procedure Procedure() throws ParseException {Label n0;
   NodeToken n1;
   Token n2;
   IntegerLiteral n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   IntegerLiteral n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   IntegerLiteral n13;
   NodeToken n14;
   Token n15;
   StmtList n16;
   NodeToken n17;
   Token n18;
   NodeOptional n19 = new NodeOptional();
   SpillInfo n20;
    n0 = Label();
    n2 = jj_consume_token(LSQPAREN);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = IntegerLiteral();
    n5 = jj_consume_token(RSQPAREN);
n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(LSQPAREN);
n6 = JTBToolkit.makeNodeToken(n7);
    n8 = IntegerLiteral();
    n10 = jj_consume_token(RSQPAREN);
n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(LSQPAREN);
n11 = JTBToolkit.makeNodeToken(n12);
    n13 = IntegerLiteral();
    n15 = jj_consume_token(RSQPAREN);
n14 = JTBToolkit.makeNodeToken(n15);
    n16 = StmtList();
    n18 = jj_consume_token(END);
n17 = JTBToolkit.makeNodeToken(n18);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 81:{
      n20 = SpillInfo();
n19.addNode(n20);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return new Procedure(n0,n1,n3,n4,n6,n8,n9,n11,n13,n14,n16,n17,n19);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt Stmt() throws ParseException {NodeChoice n0;
   NoOpStmt n1;
   ErrorStmt n2;
   CJumpStmt n3;
   JumpStmt n4;
   HStoreStmt n5;
   HLoadStmt n6;
   MoveStmt n7;
   PrintStmt n8;
   ALoadStmt n9;
   AStoreStmt n10;
   PassArgStmt n11;
   CallStmt n12;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOOP:{
      n1 = NoOpStmt();
n0 = new NodeChoice(n1, 0);
      break;
      }
    case ERROR:{
      n2 = ErrorStmt();
n0 = new NodeChoice(n2, 1);
      break;
      }
    case CJUMP:{
      n3 = CJumpStmt();
n0 = new NodeChoice(n3, 2);
      break;
      }
    case JUMP:{
      n4 = JumpStmt();
n0 = new NodeChoice(n4, 3);
      break;
      }
    case HSTORE:{
      n5 = HStoreStmt();
n0 = new NodeChoice(n5, 4);
      break;
      }
    case HLOAD:{
      n6 = HLoadStmt();
n0 = new NodeChoice(n6, 5);
      break;
      }
    case MOVE:{
      n7 = MoveStmt();
n0 = new NodeChoice(n7, 6);
      break;
      }
    case PRINT:{
      n8 = PrintStmt();
n0 = new NodeChoice(n8, 7);
      break;
      }
    case ALOAD:{
      n9 = ALoadStmt();
n0 = new NodeChoice(n9, 8);
      break;
      }
    case ASTORE:{
      n10 = AStoreStmt();
n0 = new NodeChoice(n10, 9);
      break;
      }
    case PASSARG:{
      n11 = PassArgStmt();
n0 = new NodeChoice(n11, 10);
      break;
      }
    case CALL:{
      n12 = CallStmt();
n0 = new NodeChoice(n12, 11);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new Stmt(n0);}
    throw new Error("Missing return statement in function");
}

  static final public NoOpStmt NoOpStmt() throws ParseException {NodeToken n0;
   Token n1;
    n1 = jj_consume_token(NOOP);
n0 = JTBToolkit.makeNodeToken(n1);
{if ("" != null) return new NoOpStmt(n0);}
    throw new Error("Missing return statement in function");
}

  static final public ErrorStmt ErrorStmt() throws ParseException {NodeToken n0;
   Token n1;
    n1 = jj_consume_token(ERROR);
n0 = JTBToolkit.makeNodeToken(n1);
{if ("" != null) return new ErrorStmt(n0);}
    throw new Error("Missing return statement in function");
}

  static final public CJumpStmt CJumpStmt() throws ParseException {NodeToken n0;
   Token n1;
   Reg n2;
   Label n3;
    n1 = jj_consume_token(CJUMP);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Reg();
    n3 = Label();
{if ("" != null) return new CJumpStmt(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public JumpStmt JumpStmt() throws ParseException {NodeToken n0;
   Token n1;
   Label n2;
    n1 = jj_consume_token(JUMP);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Label();
{if ("" != null) return new JumpStmt(n0,n2);}
    throw new Error("Missing return statement in function");
}

  static final public HStoreStmt HStoreStmt() throws ParseException {NodeToken n0;
   Token n1;
   Reg n2;
   IntegerLiteral n3;
   Reg n4;
    n1 = jj_consume_token(HSTORE);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Reg();
    n3 = IntegerLiteral();
    n4 = Reg();
{if ("" != null) return new HStoreStmt(n0,n2,n3,n4);}
    throw new Error("Missing return statement in function");
}

  static final public HLoadStmt HLoadStmt() throws ParseException {NodeToken n0;
   Token n1;
   Reg n2;
   Reg n3;
   IntegerLiteral n4;
    n1 = jj_consume_token(HLOAD);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Reg();
    n3 = Reg();
    n4 = IntegerLiteral();
{if ("" != null) return new HLoadStmt(n0,n2,n3,n4);}
    throw new Error("Missing return statement in function");
}

  static final public MoveStmt MoveStmt() throws ParseException {NodeToken n0;
   Token n1;
   Reg n2;
   Exp n3;
    n1 = jj_consume_token(MOVE);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Reg();
    n3 = Exp();
{if ("" != null) return new MoveStmt(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public PrintStmt PrintStmt() throws ParseException {NodeToken n0;
   Token n1;
   SimpleExp n2;
    n1 = jj_consume_token(PRINT);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = SimpleExp();
{if ("" != null) return new PrintStmt(n0,n2);}
    throw new Error("Missing return statement in function");
}

  static final public ALoadStmt ALoadStmt() throws ParseException {NodeToken n0;
   Token n1;
   Reg n2;
   SpilledArg n3;
    n1 = jj_consume_token(ALOAD);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Reg();
    n3 = SpilledArg();
{if ("" != null) return new ALoadStmt(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public AStoreStmt AStoreStmt() throws ParseException {NodeToken n0;
   Token n1;
   SpilledArg n2;
   Reg n3;
    n1 = jj_consume_token(ASTORE);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = SpilledArg();
    n3 = Reg();
{if ("" != null) return new AStoreStmt(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public PassArgStmt PassArgStmt() throws ParseException {NodeToken n0;
   Token n1;
   IntegerLiteral n2;
   Reg n3;
    n1 = jj_consume_token(PASSARG);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = IntegerLiteral();
    n3 = Reg();
{if ("" != null) return new PassArgStmt(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public CallStmt CallStmt() throws ParseException {NodeToken n0;
   Token n1;
   SimpleExp n2;
    n1 = jj_consume_token(CALL);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = SimpleExp();
{if ("" != null) return new CallStmt(n0,n2);}
    throw new Error("Missing return statement in function");
}
